force-app/main/default/objects/Survey_Event__c/Survey_Event__c.object-meta.xml
<CustomObject>
    <label>Survey Event</label>
    <nameField>
        <label>Survey Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>