force-app/main/default/objects/Survey_Event__c/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <label>Event ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>