force-app/main/default/objects/Survey_Event__c/fields/First_Survey_Promise_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Survey_Promise_Date_Time__c</fullName>
    <label>First Survey Promise Date Time</label>
    <type>DateTime</type>
</CustomField>